# await-openai

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
async-claude/: Cargo.toml  README.md
async-claude/src/: lib.rs  messages.rs  price.rs  tool.rs
async-claude/src/messages/: openai.rs  request.rs  response.rs  stream_response.rs
async-gemini/: Cargo.toml  README.md
async-gemini/src/: entity.rs  lib.rs  models.rs  util.rs
async-gemini/src/entity/: custom_deserialize.rs  request_body.rs
async-gemini/src/models/: generate_content.rs
async-gemini/src/models/generate_content/: request.rs  response.rs
await-openai/: Cargo.toml  README.md
await-openai/benches/async-openai/: main.rs  tools.rs
await-openai/src/: claude.rs  entity.rs  gemini.rs  lib.rs  magi.rs  price.rs  rmcp.rs  tiktoken.rs  tool.rs  tools.rs
await-openai/src/entity/: chat_completion_chunk.rs  chat_completion_object.rs  create_chat_completion.rs
await-openai/src/tiktoken/: image_token.rs
src/: entity.rs
src/entity/: chat_completion_chunk.rs  chat_completion_object.rs  create_chat_completion.rs
