[workspace]
members = ["await-openai", "async-gemini", "async-claude"]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["await-openai"]
resolver = "2"

[workspace.package]
homepage = "https://github.com/washanhanzi/await-openai"
repository = "https://github.com/washanhanzi/await-openai"


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1.0"
async-claude = { path = "./async-claude", version = "0" }
async-gemini = { path = "./async-gemini", version = "0" }
await-openai = { path = "./await-openai", version = "0" }
paste = "1"
tracing = "0.1"
rmcp = "0"

# dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }
async-openai = "0.26"
