[package]
name = "async-claude"
description = "utils for claude API"
version = "0.4.0"
edition = "2021"
license = "MIT"
keywords = ["claude", "anthropic"]
homepage = "https://github.com/washanhanzi/await-openai"
repository = "https://github.com/washanhanzi/await-openai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
