[package]
name = "async-claude"
description = "utils for claude API"
version = "0.11.1"
edition = "2021"
license = "MIT"
keywords = ["claude", "anthropic"]
homepage = "https://github.com/washanhanzi/await-openai"
repository = "https://github.com/washanhanzi/await-openai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true

[features]
default = []
price = []
