[package]
name = "async-claude"
description = "utils for claude API"
version = "0.15.0"
edition = "2021"
license = "MIT"
keywords = ["claude", "anthropic"]
homepage = "https://github.com/washanhanzi/await-openai"
repository = "https://github.com/washanhanzi/await-openai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
paste = { workspace = true, optional = true }

[features]
default = []
price = []
tool = ["anyhow", "schemars", "paste"]
