[package]
name = "async-gemini"
version = "0.0.2"
edition = "2021"
description = "utils for gemini"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
