[package]
name = "async-gemini"
version = "0.0.4"
edition = "2021"
description = "utils for gemini"
keywords = ["gemini"]
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/washanhanzi/await-openai"
repository = "https://github.com/washanhanzi/await-openai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[features]
default = ["models", "util"]
models = []
util = []
