[package]
name = "async-gemini"
version = "0.1.0"
edition = "2021"
description = "utils for gemini"
keywords = ["gemini"]
license = "MIT"
homepage = "https://github.com/washanhanzi/await-openai"
repository = "https://github.com/washanhanzi/await-openai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true


[features]
default = ["models", "util"]
models = []
util = []
