[package]
name = "await-openai"
description = "utils for openai"
version = "0.12.0"
edition = "2021"
readme = "README.md"
keywords = ["openai", "chatgpt"]
license = "MIT"
homepage = "https://github.com/washanhanzi/await-openai"
repository = "https://github.com/washanhanzi/await-openai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = { version = "0", optional = true }
anyhow = { version = "1", optional = true }
schemars = { version = "0.8", optional = true }
paste = { version = "1", optional = true }
async-claude = { path = "../async-claude", version = "0.1.0", optional = true }
tracing = { version = "0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
async-openai = "0"
openai-func-enums = "0"

[features]
default = []
tiktoken = ["tiktoken-rs", "anyhow"]
tool = ["schemars", "anyhow", "paste"]
claude = ["async-claude", "tracing"]

[[bench]]
name = "async-openai"
harness = false
