[package]
name = "await-openai"
description = "utils for openai"
version = "0.29.0"
edition = "2024"
readme = "README.md"
keywords = ["openai", "chatgpt"]
license = "MIT"
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow = { version = "1.0", optional = true }
schemars = { version = "0.8", optional = true }
paste = { version = "1", optional = true }
async-claude = { path = "../async-claude", version = "0.11", optional = true }
async-gemini = { path = "../async-gemini", version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }
derive_builder = "0.20"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
async-openai = "0.26"

[features]
default = []
tool = ["schemars", "anyhow", "paste"]
claude = ["async-claude", "tracing"]
claude-price = ["claude", "async-claude/price"]
gemini = ["async-gemini"]
price = []

[[bench]]
name = "async-openai"
harness = false
