[package]
name = "await-openai"
description = "utils for openai"
version = "0.32.0"
edition = "2024"
readme = "README.md"
keywords = ["openai", "chatgpt"]
license = "MIT"
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
paste = { workspace = true, optional = true }
async-claude = { workspace = true, optional = true }
async-gemini = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
async-openai = { workspace = true }

[features]
default = []
tool = ["schemars", "anyhow", "paste"]
claude = ["async-claude", "tracing"]
claude-price = ["claude", "async-claude/price"]
gemini = ["async-gemini"]
price = []

[[bench]]
name = "async-openai"
harness = false
